samples/_failures_safe/1761701064_887579_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf8ad7ff.c: In function ‘main’:
./samples/SAFE/__tmp_bf8ad7ff.c:158:5: error: expected expression at end of input
  158 |     if (written != output_buf.size)
      |     ^~
./samples/SAFE/__tmp_bf8ad7ff.c:158:5: error: expected declaration or statement at end of input
